# uinpp

./: CMakeLists.txt  flake.nix  uinpp-config.cmake.in
extra/: uinpp_util.cpp
include/uinpp/: device.hpp  event.hpp  event_emitter.hpp  event_sequence.hpp  from.hpp  fwd.hpp  glib_uinput.hpp  linux.cpp  linux.hpp  linux_uinput.hpp  multi_device.hpp  parse.cpp  parse.hpp  ui_event.hpp  ui_event_emitter.hpp  ui_event_sequence.hpp  uinput.hpp
src/: abs_event_collector.cpp  abs_event_collector.hpp  abs_event_emitter.cpp  abs_event_emitter.hpp  device.cpp  event.cpp  event_collector.cpp  event_collector.hpp  event_emitter.cpp  event_sequence.cpp  force_feedback_handler.cpp  force_feedback_handler.hpp  key_event_collector.cpp  key_event_collector.hpp  key_event_emitter.cpp  key_event_emitter.hpp  linux.cpp  linux_uinput.cpp  linux_uinput.hpp  multi_device.cpp  parse.cpp  rel_event_collector.cpp  rel_event_collector.hpp  rel_event_emitter.cpp  rel_event_emitter.hpp  ui_abs_event_collector.cpp  ui_abs_event_collector.hpp  ui_abs_event_emitter.cpp  ui_abs_event_emitter.hpp  ui_event.cpp  ui_event_collector.cpp  ui_event_collector.hpp  ui_event_emitter.cpp  ui_event_sequence.cpp  ui_key_event_collector.cpp  ui_key_event_collector.hpp  ui_key_event_emitter.cpp  ui_key_event_emitter.hpp  ui_rel_event_collector.cpp  ui_rel_event_collector.hpp  (+4 more)
